--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,7 +13,7 @@
     #button-p-a{
         flex-direction: column;
     }
-    #last-step-go-back{
+    #last-step-go-back-last-pan{
         flex-direction: column;
     }
     .another-page{
